docs: Regenerate CLAUDE.md from actual workspace analysis
Replace generic Claude Flow V3 boilerplate with project-specific
configuration reflecting the Java 25 Maven project, SPI architecture,
build/test/benchmark commands, and code style conventions.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>