@@ -1,188 +1,185 @@
-# Claude Code Configuration - Claude Flow V3
+# Claude Code Configuration — Fullerstack Humainary
 
-## Behavioral Rules (Always Enforced)
+## Project Overview
 
-- Do what has been asked; nothing more, nothing less
-- NEVER create files unless they're absolutely necessary for achieving your goal
-- ALWAYS prefer editing an existing file to creating a new one
-- NEVER proactively create documentation files (*.md) or README files unless explicitly requested
-- NEVER save working files, text/mds, or tests to the root folder
-- Never continuously check status after spawning a swarm — wait for results
-- ALWAYS read a file before editing it
-- NEVER commit secrets, credentials, or .env files
+Java 25 implementation of the [Humainary Substrates API](https://github.com/humainary-io/substrates-api-java) — an SPI-based runtime for observable, event-driven systems with semiotic signal interpretation. We implement the API; all design credit goes to **William Louth** and the **Humainary** project.
 
-## File Organization
+- **Language:** Java 25 (preview features enabled)
+- **Build:** Maven 3.9+
+- **Package:** `io.fullerstack:fullerstack-substrates:1.0.0-RC2`
+- **API:** `io.humainary.substrates` (1.0.0-PREVIEW)
+- **TCK:** 387 tests passing (100% compliance)
+- **License:** Apache 2.0
 
-- NEVER save to root folder — use the directories below
-- Use `/src` for source code files
-- Use `/tests` for test files
-- Use `/docs` for documentation and markdown files
-- Use `/config` for configuration files
-- Use `/scripts` for utility scripts
-- Use `/examples` for example code
+## Repository Layout
 
-## Project Architecture
-
-- Follow Domain-Driven Design with bounded contexts
-- Keep files under 500 lines
-- Use typed interfaces for all public APIs
-- Prefer TDD London School (mock-first) for new code
-- Use event sourcing for state changes
-- Ensure input validation at system boundaries
-
-### Project Config
-
-- **Topology**: hierarchical-mesh
-- **Max Agents**: 15
-- **Memory**: hybrid
-- **HNSW**: Enabled
-- **Neural**: Enabled
+```
+fullerstack-humainary/
+├── fullerstack-substrates/          # Main Maven project
+│   ├── pom.xml                      # Build configuration
+│   ├── spi.env                      # SPI env vars for scripts
+│   ├── src/
+│   │   ├── main/java/io/fullerstack/substrates/   # Implementation (26 classes)
+│   │   ├── main/resources/META-INF/services/       # SPI provider registration
+│   │   ├── test/java/io/fullerstack/substrates/    # Unit + contract tests
+│   │   └── jmh/java/                               # JMH benchmark sources
+│   ├── docs/                        # Architecture, guides, benchmarks
+│   ├── jmh.sh                       # Direct JMH runner
+│   ├── tck.sh                       # Direct TCK runner
+│   └── queue-bench.sh               # Isolated queue benchmarks
+├── scripts/                         # Top-level wrapper scripts
+│   ├── benchmark.sh                 # Benchmark runner (wraps Humainary jmh.sh)
+│   ├── tck.sh                       # TCK runner (wraps Humainary tck.sh)
+│   └── format.sh                    # Code formatter (javalint)
+├── .claude/                         # Claude Code config, hooks, skills, commands
+├── .github/workflows/               # CI/CD (publish to GitHub Packages)
+├── .editorconfig                    # Formatting rules (Java: 2-space indent, 200 line width)
+└── .prettierrc                      # Prettier config for Java (plugin-java)
+```
 
 ## Build & Test
 
+### Prerequisites
+
+The Humainary API must be installed locally (not on Maven Central):
+
 ```bash
-# Build
-npm run build
-
-# Test
-npm test
-
-# Lint
-npm run lint
+git clone https://github.com/humainary-io/substrates-api-java.git
+cd substrates-api-java
+mvn clean install -DskipTests
 ```
 
+### Build
+
+```bash
+cd fullerstack-substrates
+mvn clean install
+```
+
+### Run Tests (unit + contract tests)
+
+```bash
+cd fullerstack-substrates
+mvn test
+```
+
+### Run TCK (Humainary specification compliance)
+
+```bash
+./scripts/tck.sh                    # All TCK tests (387 expected)
+./scripts/tck.sh CircuitTest        # Specific test class
+```
+
+### Run JMH Benchmarks
+
+```bash
+./scripts/benchmark.sh              # All benchmarks
+./scripts/benchmark.sh PipeOps      # Specific group
+./scripts/benchmark.sh -l           # List available benchmarks
+```
+
+Benchmark groups: CircuitOps, ConduitOps, CortexOps, FlowOps, NameOps, PipeOps, ReservoirOps, ScopeOps, StateOps, SubscriberOps (Substrates) + 30 Serventis groups.
+
+### Format Code
+
+```bash
+./scripts/format.sh                 # Format all Java files
+./scripts/format.sh --check         # Check only
+```
+
+## Java & JVM Configuration
+
+- Java 25 with `--enable-preview`
+- Compiler flags: `--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED`
+- Surefire flags: `-XX:-RestrictContended`, `-XX:+EnableDynamicAgentLoading`, multiple `--add-opens`
+- JMH flags: `-XX:+UseCompactObjectHeaders`, `-XX:ParallelGCThreads=2`
+- SDKMAN used for Java version management: `sdk use java 25.0.1-open`
+
+## Architecture
+
+### SPI Provider
+
+- Provider class: `io.fullerstack.substrates.FsCortexProvider`
+- Registration: `META-INF/services/io.humainary.substrates.spi.CortexProvider`
+- Loading: Java `ServiceLoader` auto-discovery
+
+### Core Implementation Classes (package: `io.fullerstack.substrates`)
+
+| Humainary Interface | Fullerstack Impl | Purpose |
+|---------------------|------------------|---------|
+| Cortex | FsCortex | Entry point — creates Circuits and Scopes |
+| Circuit | FsCircuit | Event orchestration with dual-queue processing |
+| Conduit | FsConduit | Channel factory and subscriber management |
+| Channel | FsChannel | Named emission port |
+| Pipe | FsPipe | Async emission carrier |
+| Cell | FsCell | Bidirectional hierarchical transformation |
+| Name | FsName | Hierarchical dot-notation names with caching |
+| Subject | FsSubject | Contextual entity identity |
+| Scope | FsScope | Resource lifecycle management |
+| Subscriber | FsSubscriber | Emission observer |
+| Flow | FsFlow | Emission processing pipeline |
+| State | FsState | Slot-based state container |
+| Reservoir | FsReservoir | Buffered emission capture |
+
+### Infrastructure Classes
+
+| Class | Purpose |
+|-------|---------|
+| IngressQueue | Wait-free MPSC queue for external emissions |
+| TransitQueue | Single-threaded FIFO for cascading emissions |
+| QChunk | Unified 64-slot chunk with interleaved [receiver, value] layout |
+| FsCurrent | Circuit execution context with thread-local cache |
+
+### Key Design Patterns
+
+- **Dual-queue architecture:** IngressQueue (MPSC, wait-free) + TransitQueue (single-threaded cascade)
+- **VarHandle semantics:** release/acquire for memory ordering, opaque reads for parked flag
+- **@Contended annotation:** False-sharing prevention on hot fields
+- **Virtual threads:** Java 25 virtual CPU core pattern
+- **Intrusive data structures:** No wrapper objects, cache-friendly layout
+
+## Dependencies
+
+| Dependency | Version | Purpose |
+|-----------|---------|---------|
+| humainary-substrates-api | 1.0.0-PREVIEW | Substrates API interfaces |
+| humainary-substrates-ext-serventis | 1.0.0-PREVIEW | Serventis observability extension |
+| jctools-core | 4.0.5 | High-performance concurrent queues |
+| vavr | 0.10.4 | Functional data structures |
+| lombok | 1.18.34 | Compile-time code generation |
+| slf4j-api | 2.0.16 | Logging facade |
+| lmax-disruptor | 4.0.0 | Benchmark comparison baseline |
+| jmh-core | 1.37 | JMH benchmarking framework |
+| junit-jupiter | 5.11.0 | Testing framework |
+| assertj | 3.26.3 | Fluent test assertions |
+| mockito | 5.15.2 | Mocking framework |
+| humainary-substrates-tck | 1.0.0-PREVIEW | TCK compliance tests |
+
+## Code Style
+
+- **Indentation:** 2 spaces (all files)
+- **Java max line length:** 200 characters
+- **Continuation indent:** 2 spaces
+- **Formatter:** EditorConfig + javalint (IntelliJ CE formatter)
+- **Import order:** `*`, blank, `javax.**`, `java.**`, blank, `$*`
+- **Naming:** `Fs` prefix for all implementation classes (FsCortex, FsCircuit, etc.)
+- **File size:** Keep under 500 lines
+
+## CI/CD
+
+- **Workflow:** `.github/workflows/publish-package.yml`
+- **Trigger:** Push to `main` with changes in `fullerstack-substrates/`
+- **Target:** GitHub Packages Maven registry
+- **Java:** Temurin 25
+
+## Behavioral Rules
+
+- ALWAYS read a file before editing it
 - ALWAYS run tests after making code changes
 - ALWAYS verify build succeeds before committing
-
-## Security Rules
-
-- NEVER hardcode API keys, secrets, or credentials in source files
-- NEVER commit .env files or any file containing secrets
-- Always validate user input at system boundaries
-- Always sanitize file paths to prevent directory traversal
-- Run `npx @claude-flow/cli@latest security scan` after security-related changes
-
-## Concurrency: 1 MESSAGE = ALL RELATED OPERATIONS
-
-- All operations MUST be concurrent/parallel in a single message
-- Use Claude Code's Task tool for spawning agents, not just MCP
-- ALWAYS batch ALL todos in ONE TodoWrite call (5-10+ minimum)
-- ALWAYS spawn ALL agents in ONE message with full instructions via Task tool
-- ALWAYS batch ALL file reads/writes/edits in ONE message
-- ALWAYS batch ALL Bash commands in ONE message
-
-## Swarm Orchestration
-
-- MUST initialize the swarm using CLI tools when starting complex tasks
-- MUST spawn concurrent agents using Claude Code's Task tool
-- Never use CLI tools alone for execution — Task tool agents do the actual work
-- MUST call CLI tools AND Task tool in ONE message for complex work
-
-### 3-Tier Model Routing (ADR-026)
-
-| Tier | Handler | Latency | Cost | Use Cases |
-|------|---------|---------|------|-----------|
-| **1** | Agent Booster (WASM) | <1ms | $0 | Simple transforms (var→const, add types) — Skip LLM |
-| **2** | Haiku | ~500ms | $0.0002 | Simple tasks, low complexity (<30%) |
-| **3** | Sonnet/Opus | 2-5s | $0.003-0.015 | Complex reasoning, architecture, security (>30%) |
-
-- Always check for `[AGENT_BOOSTER_AVAILABLE]` or `[TASK_MODEL_RECOMMENDATION]` before spawning agents
-- Use Edit tool directly when `[AGENT_BOOSTER_AVAILABLE]`
-
-## Swarm Configuration & Anti-Drift
-
-- ALWAYS use hierarchical topology for coding swarms
-- Keep maxAgents at 6-8 for tight coordination
-- Use specialized strategy for clear role boundaries
-- Use `raft` consensus for hive-mind (leader maintains authoritative state)
-- Run frequent checkpoints via `post-task` hooks
-- Keep shared memory namespace for all agents
-
-```bash
-npx @claude-flow/cli@latest swarm init --topology hierarchical --max-agents 8 --strategy specialized
-```
-
-## Swarm Execution Rules
-
-- ALWAYS use `run_in_background: true` for all agent Task calls
-- ALWAYS put ALL agent Task calls in ONE message for parallel execution
-- After spawning, STOP — do NOT add more tool calls or check status
-- Never poll TaskOutput or check swarm status — trust agents to return
-- When agent results arrive, review ALL results before proceeding
-
-## V3 CLI Commands
-
-### Core Commands
-
-| Command | Subcommands | Description |
-|---------|-------------|-------------|
-| `init` | 4 | Project initialization |
-| `agent` | 8 | Agent lifecycle management |
-| `swarm` | 6 | Multi-agent swarm coordination |
-| `memory` | 11 | AgentDB memory with HNSW search |
-| `task` | 6 | Task creation and lifecycle |
-| `session` | 7 | Session state management |
-| `hooks` | 17 | Self-learning hooks + 12 workers |
-| `hive-mind` | 6 | Byzantine fault-tolerant consensus |
-
-### Quick CLI Examples
-
-```bash
-npx @claude-flow/cli@latest init --wizard
-npx @claude-flow/cli@latest agent spawn -t coder --name my-coder
-npx @claude-flow/cli@latest swarm init --v3-mode
-npx @claude-flow/cli@latest memory search --query "authentication patterns"
-npx @claude-flow/cli@latest doctor --fix
-```
-
-## Available Agents (60+ Types)
-
-### Core Development
-`coder`, `reviewer`, `tester`, `planner`, `researcher`
-
-### Specialized
-`security-architect`, `security-auditor`, `memory-specialist`, `performance-engineer`
-
-### Swarm Coordination
-`hierarchical-coordinator`, `mesh-coordinator`, `adaptive-coordinator`
-
-### GitHub & Repository
-`pr-manager`, `code-review-swarm`, `issue-tracker`, `release-manager`
-
-### SPARC Methodology
-`sparc-coord`, `sparc-coder`, `specification`, `pseudocode`, `architecture`
-
-## Memory Commands Reference
-
-```bash
-# Store (REQUIRED: --key, --value; OPTIONAL: --namespace, --ttl, --tags)
-npx @claude-flow/cli@latest memory store --key "pattern-auth" --value "JWT with refresh" --namespace patterns
-
-# Search (REQUIRED: --query; OPTIONAL: --namespace, --limit, --threshold)
-npx @claude-flow/cli@latest memory search --query "authentication patterns"
-
-# List (OPTIONAL: --namespace, --limit)
-npx @claude-flow/cli@latest memory list --namespace patterns --limit 10
-
-# Retrieve (REQUIRED: --key; OPTIONAL: --namespace)
-npx @claude-flow/cli@latest memory retrieve --key "pattern-auth" --namespace patterns
-```
-
-## Quick Setup
-
-```bash
-claude mcp add claude-flow -- npx -y @claude-flow/cli@latest
-npx @claude-flow/cli@latest daemon start
-npx @claude-flow/cli@latest doctor --fix
-```
-
-## Claude Code vs CLI Tools
-
-- Claude Code's Task tool handles ALL execution: agents, file ops, code generation, git
-- CLI tools handle coordination via Bash: swarm init, memory, hooks, routing
-- NEVER use CLI tools as a substitute for Task tool agents
-
-## Support
-
-- Documentation: https://github.com/ruvnet/claude-flow
-- Issues: https://github.com/ruvnet/claude-flow/issues
+- NEVER save files to the repository root — use the project directories
+- NEVER create documentation files unless explicitly requested
+- NEVER commit secrets, credentials, or .env files
+- NEVER modify the Humainary API — we implement it, not extend it
+- Prefer editing existing files over creating new ones
+- Batch parallel tool calls in a single message when independent
